--- a/templates/cars.html
+++ b/templates/cars.html
@@ -11,11 +11,11 @@
 </head>
 <body>
 <ul>
-    {% for category in categories %}
+    {% comment %}{% for category in categories %}
         <li>
             {{ category.name }}
         </li>
-    {% endfor %}
+    {% endfor %}{% endcomment %}
 </ul>
 {% for category in categories %}
     <h3> Категория "{{ category.name }}"</h3>
@@ -29,6 +29,7 @@
                     {% else %}
                         <img src="{% static 'img/kartinka.jpg' %}" alt="">
                     {% endif %}
+                    <br><a href="#">Подробнее</a>
                 </div>
                 
             {% endfor %}
