--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="ru">
 <head>
@@ -5,6 +6,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
     <title>Вход</title>
 </head>
 <body>
@@ -12,8 +14,10 @@
 <form method="post">
     {% csrf_token %}
 
-    <input type="text" id="username" name="username" placeholder="Логин">
-    <input type="password" id="password" name="password" placeholder="Пароль">
+    <label for="username">Логин</label><br>
+    <input type="text" id="username" name="username" placeholder="Логин"><br>
+    <label for="password">Пароль</label><br>
+    <input type="password" id="password" name="password" placeholder="Пароль"><br>
 
     <button type="submit">Войти</button>
 
