--- a/templates/cars.html
+++ b/templates/cars.html
@@ -10,7 +10,11 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
-<a href="{% url 'logout' %}">Выход</a>
+{% if user.is_authenticated %}
+    <a href="{% url 'logout/' %}">Выход</a>
+{% else %}
+    <a href="{% url 'login' %}">Войти</a>
+{% endif %}
 {% for category in categories %}
     <h3> Категория "{{ category.name }}"</h3>
     <div class="category">
