--- a/templates/login.html
+++ b/templates/login.html
@@ -10,16 +10,19 @@
     <title>Вход</title>
 </head>
 <body>
+{% include 'header.html' %}
 <h1>Авторизация аккаунта</h1>
-<form method="post">
+<form method="post" class="login-form">
     {% csrf_token %}
 
     <label for="username">Логин</label><br>
     <input type="text" id="username" name="username" placeholder="Логин"><br>
     <label for="password">Пароль</label><br>
-    <input type="password" id="password" name="password" placeholder="Пароль"><br>
+    <input type="password" id="password" name="password" placeholder="Пароль"><br><br>
 
     <button type="submit">Войти</button>
+
+    <span>Нет аккаунта? <a href="{% url 'register' %}">Зарегистрироваться</a></span>
 
     {% for msg in messages %}
         <p style="color:red;">{{ msg }}</p>
